# metabench

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  CMakeLists.txt_backup  CNAME  LICENSE.md  README.md  _config.yml  build.py  check_cr.py  check_cr.rb  cmake_install.cmake  homemade_test.cpp.mako  index.html  json_output.py  mako_test.py  metabench.cmake  metabench.cmake_backup  metabench.rb  metabench_py.cmake_backup  test.cpp
benchmark/: CMakeLists.txt  FindCXXStandard.cmake  index.html.erb
benchmark/dependencies/: boost.cmake  brigand.cmake  fusion.cmake  hana.cmake  kvasir.cmake  meta.cmake  metal.cmake  mp11.cmake  mpl.cmake  std.cmake  tmp.cmake
benchmark/hetero/at/: CMakeLists.txt  fusion.list.cpp.erb  fusion.vector.cpp.erb  hana.basic_tuple.cpp.erb  hana.tuple.cpp.erb  std.tuple.cpp.erb
benchmark/hetero/at_key/: CMakeLists.txt  fusion.map.cpp.erb  hana.map.cpp.erb  hana.tuple.cpp.erb  light_pair.hpp
benchmark/hetero/cartesian_product/: CMakeLists.txt  hana.tuple.cpp.erb
benchmark/hetero/count_if/: CMakeLists.txt  fusion.list.cpp.erb  fusion.vector.cpp.erb  hana.tuple.cpp.erb
benchmark/hetero/difference/: CMakeLists.txt  hana.set.cpp.erb
benchmark/hetero/filter/: CMakeLists.txt  fusion.list.cpp.erb  fusion.vector.cpp.erb  hana.tuple.cpp.erb
benchmark/hetero/find_if/: CMakeLists.txt  fusion.list.cpp.erb  fusion.vector.cpp.erb  hana.map.cpp.erb  hana.set.cpp.erb  hana.tuple.cpp.erb
benchmark/hetero/fold_left/: CMakeLists.txt  fusion.list.cpp.erb  fusion.vector.cpp.erb  hana.basic_tuple.cpp.erb  hana.tuple.cpp.erb
benchmark/hetero/fold_right/: CMakeLists.txt  fusion.vector.cpp.erb  hana.basic_tuple.cpp.erb  hana.tuple.cpp.erb
benchmark/hetero/insert/: CMakeLists.txt  hana.map.cpp.erb  hana.set.cpp.erb
benchmark/hetero/intersection/: CMakeLists.txt  hana.set.cpp.erb
benchmark/hetero/is_disjoint/: CMakeLists.txt  hana.map.cpp.erb  hana.set.cpp.erb  hana.tuple.cpp.erb
benchmark/hetero/is_subset/: CMakeLists.txt  hana.map.cpp.erb  hana.set.cpp.erb  hana.tuple.cpp.erb
benchmark/hetero/lexicographical_compare/: CMakeLists.txt  hana.tuple.cpp.erb
benchmark/hetero/make/: CMakeLists.txt  fusion.list.cpp.erb  fusion.map.cpp.erb  fusion.set.cpp.erb  fusion.vector.cpp.erb  hana.basic_tuple.cpp.erb  hana.map.cpp.erb  hana.set.cpp.erb  hana.tuple.cpp.erb  std.array.cpp.erb  std.tuple.cpp.erb
benchmark/hetero/partition/: CMakeLists.txt  hana.tuple.cpp.erb
benchmark/hetero/sort/: CMakeLists.txt  hana.tuple.cpp.erb
benchmark/hetero/symmetric_difference/: CMakeLists.txt  hana.set.cpp.erb
benchmark/hetero/transform/: CMakeLists.txt  fusion.list.cpp.erb  fusion.vector.cpp.erb  hana.basic_tuple.cpp.erb  hana.tuple.cpp.erb
benchmark/hetero/union/: CMakeLists.txt  hana.set.cpp.erb
benchmark/hetero/unpack/: CMakeLists.txt  fusion.list.cpp.erb  fusion.vector.cpp.erb  hana.basic_tuple.cpp.erb  hana.set.cpp.erb  hana.tuple.cpp.erb
benchmark/type/all/: CMakeLists.txt  brigand.list.cpp.erb  kvasir.list.cpp.erb  meta.list.cpp.erb  metal.list.cpp.erb  tmp.list.cpp.erb
benchmark/type/any/: CMakeLists.txt  brigand.list.cpp.erb  kvasir.list.cpp.erb  meta.list.cpp.erb  metal.list.cpp.erb  mp11.list.cpp.erb  tmp.list.cpp.erb
benchmark/type/at/: CMakeLists.txt  brigand.list.cpp.erb  hana.types.cpp.erb  kvasir.list.cpp.erb  meta.list.cpp.erb  metal.list.cpp.erb  mp11.list.cpp.erb  mpl.list.cpp.erb  mpl.vector.cpp.erb  tmp.list.cpp.erb
benchmark/type/cartesian_product/: CMakeLists.txt  kvasir.list.cpp.erb  tmp.list.cpp.erb
benchmark/type/count_if/: CMakeLists.txt  brigand.list.cpp.erb  kvasir.list.cpp.erb  meta.list.cpp.erb  metal.list.cpp.erb  mpl.list.cpp.erb  mpl.vector.cpp.erb  tmp.list.cpp.erb
benchmark/type/decay/: CMakeLists.txt  decay_custom.cpp.mako  decay_std.cpp.mako
benchmark/type/drop/: CMakeLists.txt  kvasir.list.cpp.erb  tmp.list.cpp.erb
benchmark/type/erase/: CMakeLists.txt  brigand.list.cpp.erb  kvasir.list.cpp.erb  metal.list.cpp.erb  mpl.list.cpp.erb  mpl.vector.cpp.erb  tmp.list.cpp.erb
benchmark/type/filter/: CMakeLists.txt  brigand.list.cpp.erb  kvasir.list.cpp.erb  meta.list.cpp.erb  metal.list.cpp.erb  mpl.list.cpp.erb  mpl.vector.cpp.erb
benchmark/type/find_if/: CMakeLists.txt  brigand.list.cpp.erb  hana.std_integer_sequence.cpp.erb  kvasir.list.cpp.erb  meta.list.cpp.erb  metal.list.cpp.erb  mpl.list.cpp.erb  mpl.vector.cpp.erb
benchmark/type/fold_left/: CMakeLists.txt  brigand.list.cpp.erb  kvasir.list.cpp.erb  meta.list.cpp.erb  metal.list.cpp.erb  mpl.list.cpp.erb  mpl.vector.cpp.erb  tmp.list.cpp.erb
benchmark/type/fold_right/: CMakeLists.txt  brigand.list.cpp.erb  kvasir.list.cpp.erb  meta.list.cpp.erb  metal.list.cpp.erb  mpl.list.cpp.erb  mpl.vector.cpp.erb  tmp.list.cpp.erb
benchmark/type/insert/: CMakeLists.txt  kvasir.list.cpp.erb  metal.list.cpp.erb  mpl.list.cpp.erb  mpl.vector.cpp.erb  tmp.list.cpp.erb
benchmark/type/join/: CMakeLists.txt  kvasir.list.cpp.erb
benchmark/type/make/: CMakeLists.txt  brigand.list.cpp.erb  hana.types.cpp.erb  meta.list.cpp.erb  metal.list.cpp.erb  mpl.list.cpp.erb  mpl.vector.cpp.erb  tmp.list.cpp.erb
benchmark/type/partition/: CMakeLists.txt  brigand.list.cpp.erb  kvasir.list.cpp.erb  meta.list.cpp.erb  metal.list.cpp.erb  mpl.list.cpp.erb  mpl.vector.cpp.erb  tmp.list.cpp.erb
benchmark/type/replace_if/: CMakeLists.txt  brigand.list.cpp.erb  hana.types.cpp.erb  kvasir.list.cpp.erb  meta.list.cpp.erb  metal.list.cpp.erb  mpl.list.cpp.erb  mpl.vector.cpp.erb  tmp.list.cpp.erb
benchmark/type/reverse/: CMakeLists.txt  brigand.list.cpp.erb  kvasir.list.cpp.erb  meta.list.cpp.erb  metal.list.cpp.erb  mpl.list.cpp.erb  mpl.vector.cpp.erb  tmp.list.cpp.erb
benchmark/type/sort/: CMakeLists.txt  brigand.list.cpp.erb  kvasir.list.cpp.erb  mpl.list.cpp.erb  mpl.vector.cpp.erb  tmp.list.cpp.erb
benchmark/type/take/: CMakeLists.txt  kvasir.list.cpp.erb  tmp.list.cpp.erb
benchmark/type/transform/: CMakeLists.txt  brigand.list.cpp.erb  hana.types.cpp.erb  kvasir.list.cpp.erb  meta.list.cpp.erb  metal.list.cpp.erb  mpl.list.cpp.erb  mpl.vector.cpp.erb  tmp.list.cpp.erb
(+2367 files in other folders)
